<resources>
    <string name="app_name">MedViser</string>
    <string name="action_settings">Settings</string>
    <string name="lblDias">Dias:</string>
    <string name="lblTomas">Tomas</string>
    <string name="lblTitNuevaMed">Editar medicamento</string>
    <string name="lblNuevaMed">Nombre:</string>
    <string name="lblDetallesMed">Detalles:</string>
    <string name="lblHoraToma">Hora:</string>
    <string name="lblDetallesToma">Detalles:</string>
    <string name="lblLunes">L</string>
    <string name="lblMartes">M</string>
    <string name="lblMiercoles">X</string>
    <string name="lblJueves">J</string>
    <string name="lblViernes">V</string>
    <string name="lblSabado">S</string>
    <string name="lblDomingo">D</string>
    <string name="lblActiva">Activa</string>
    <string name="titleSeleccionaHora">Selecciona la hora</string>
    <string name="lblTitLista">TOMAS DE HOY</string>
    <string name="title_activity_main2">MedViser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_drug">Añadir Medicina</string>
    <string name="drug_list">Listado Medicinas</string>
    <string name="hora">Hora:</string>
    <string name="detalles">Detalles:</string>
    <string name="estado">Estado</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
