<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imart.medviser.NuevaMed">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linTotal"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblTitNuevaMed"
                android:id="@+id/lblTitMed"
                android:layout_gravity="center_horizontal" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblActiva"
                android:id="@+id/swActiva"
                android:layout_gravity="right"
                android:checked="true"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linNombre"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lblNuevaMed"
                    android:id="@+id/lblNuevaMed"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtMedNombre"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linDet">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lblDetallesMed"
                    android:id="@+id/lblDetallesMed"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtMedDetalle"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblTomas"
                android:id="@+id/lblTomas"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linToma"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lblDias"
                        android:id="@+id/lblDiasToma" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblLunes"
                        android:id="@+id/chkLunes"
                        android:checked="false"
                        android:layout_marginLeft="10dp" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblMartes"
                        android:id="@+id/chkMartes"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblMiercoles"
                        android:id="@+id/chkMiercoles"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblJueves"
                        android:id="@+id/chkJueves"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblViernes"
                        android:id="@+id/chkViernes"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblSabado"
                        android:id="@+id/chkSabado"
                        android:checked="false" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblDomingo"
                        android:id="@+id/chkDomingo"
                        android:checked="false" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linTomaHora">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lblHoraToma"
                        android:id="@+id/lblHoraToma"/>

                    <EditText
                        android:layout_width="78dp"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:ems="10"
                        android:id="@+id/txtHoraToma" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lblDetallesToma"
                        android:id="@+id/lblDetallesToma"
                        android:layout_marginLeft="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtDetallesToma" />

                </LinearLayout>

            </LinearLayout>

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:id="@+id/btnNuevaHora"
                android:src="@drawable/add"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:alpha="1"
                android:backgroundTint="#c33f51b5"
                android:layout_below="@+id/scrollView"
                android:layout_alignParentStart="true" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Insertar"
        android:id="@+id/btnInsertar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
